Add Identity And ExamResult

--- a/ExamApp/appsettings.json
+++ b/ExamApp/appsettings.json
@@ -8,6 +8,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ExamDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ExamDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ExamIdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Data": {
+    "AdminUser": {
+      "username": "umit",
+      "email": "umitcelebi@gmail.com",
+      "password": "Sa_2035",
+      "role": "admin"
+    }
+  } 
 }
